<resources>
    <string name="app_name">חניה בקליק</string>
    <string name="internet_dialog_title">No Connection</string>
    <string name="internet_supporting_text">please connect to the internet and try again</string>
    <string name="try_again">נסה שנית</string>
    <string name="ok">OK</string>
    <string name="error_title">Something went wrong…</string>
    <string name="dialog_error_message">please try again later</string>
    <string name="ParkingTicket">תו חניה</string>
    <string name="new_ticket_title">הנפקת תו חניה</string>
    <string name="personal_details_title">1. פרטים אישיים</string>
    <string name="private_name">שם פרטי</string>
    <string name="family_name">שם משפחה</string>
    <string name="pick_birthday_date">בחר תאריך לידה</string>
    <string name="enter_id">תעודת זהות</string>
    <string name="continue_next_page">המשך</string>
    <string name="private_number">טלפון נייד</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="residential_title">מגורים</string>
    <string name="city">עיר</string>
    <string name="street">רחוב</string>
    <string name="apartmentNumber">מספר דירה</string>
    <string name="houseNumber">מספר בית</string>
    <string name="postalCode">מיקוד</string>
    <string name="permanentTenant">דייר קבוע</string>
    <string name="rentTenant">דייר בשכירות</string>
    <string name="documents">צירוף מסמכים</string>
    <string name="car_title">רכב</string>
    <string name="ownership">בעלות</string>
    <string name="idDocument">תעודת זהות</string>
    <string name="drivingLicense">רישיון נהיגה</string>
    <string name="carLicense">רישיון רכב</string>
    <string name="useTerms">קראתי והבנתי את תנאי השימוש</string>
    <string name="success_image">success image</string>
    <string name="finish">סיום</string>
    <string name="parkingTicketSent">תו החניה נשלח אליך במייל</string>
    <string name="requestReceived">הפעולה הושלמה בהצלחה</string>
    <string name="carNumber">מספר רכב</string>
    <string name="checkParkingTicketText">הקלד מספר רכב ומספר תו חניה שתואם לרכב על מנת לבדוק האם תו החניה שברשותך בתוקף</string>
    <string name="checkParkingTicketStatusTitle">בדיקת סטטוס תו חניה</string>
    <string name="ParkingTicketNumber">מספר תו חניה</string>
    <string name="check">בדיקה</string>
    <string name="close">סגור</string>
    <string name="contact_us">טלפון- 03-9383278 פקס- 03-9381261 מענה טלפוני בימים א׳-ה׳, בין השעות 08:30-15:00</string>
    <string name="welcome">ברוכים הבאים!</string>
    <string name="conditions">תנאים להנפקת תו חניה:</string>
    <string name="condition_one">1. כתובת מגורים עדכנית בראש העין הרשומה במשרד הפנים.</string>
    <string name="condition_two">2. בעלות על הרכב.</string>
    <string name="condition_three">3. רישיון רכב, תעודת זהות ורישיון נהיגה בתוקף.</string>
    <string name="validTicketTime">לכמה זמן תו החניה בתוקף?</string>
    <string name="answerValidTicketTime">תו החניה תקף לשלוש שנים מרגע הנפקתו לתושב.</string>
    <string name="contact">צור קשר:</string>
    <string name="parkingAute">רשות החניה</string>
    <string name="economyState">החברה הכלכלית</string>
</resources>