<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#359bca"
    tools:context="src.fragments.FragmentSuccess">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/success_IMV_successImage"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/success_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requestReceived"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parkingTicketSent"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/success_BTN_back"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/finish"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:theme="@style/Theme.MaterialComponents.NoActionBar"
            app:cornerRadius="20dp"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp" />

    </LinearLayout>

</FrameLayout>