<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_status"
    tools:context="src.activities.StatusActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/checkParkingTicketStatusTitle"
            android:textColor="@color/white"
            android:textDirection="rtl"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/checkParkingTicketText"
            android:textColor="@color/white"
            android:textDirection="rtl"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/status_EDT_carNumber"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:hint="@string/carNumber"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textDirection="rtl" />

        <EditText
            android:id="@+id/status_EDT_parkingTicketNumber"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/ParkingTicketNumber"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textDirection="rtl" />

        <Button
            android:id="@+id/status_BTN_check"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/rounded_edit_text"
            android:text="@string/check"
            android:textColor="#3F51B5"
            android:textSize="20sp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/main_NAV_navigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F3F3F8"
            app:backgroundTint="#F3F3F8"
            app:itemIconTint="@color/background_text_color"
            app:itemTextColor="@color/background_text_color"
            app:menu="@menu/bottom_navigation_menu" />
    </RelativeLayout>

</LinearLayout>