<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#359bca"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="src.fragments.FragmentPersonalInfo">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_details_title"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/personalInfo_EDT_firstName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/private_name"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#86818E"
                android:textColorHint="#86818E" />

            <EditText
                android:id="@+id/personalInfo_EDT_lastName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/family_name"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#86818E"
                android:textColorHint="#86818E" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:layoutDirection="rtl">

                <EditText
                    android:id="@+id/personalInfo_EDT_pickDate"
                    android:layout_width="0dp"
                    android:layout_weight=".70"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:padding="10dp"
                    android:background="@drawable/rounded_edit_text"
                    android:cursorVisible="false"
                    android:enabled="false"
                    android:hint="@string/pick_birthday_date"
                    android:inputType="date"
                    android:textColor="#86818E"
                    android:textColorHint="#86818E" />

                <ImageButton
                    android:id="@+id/personalInfo_BTN_pickDate"
                    android:layout_width="0dp"
                    android:layout_weight=".20"
                    android:layout_height="60dp"
                    android:layout_marginEnd="5dp"
                    android:backgroundTint="@color/colorTopBackground"
                    android:scaleType="fitXY"
                    android:elevation="6dp"
                    android:src="@drawable/ic__calender" />

            </LinearLayout>

            <EditText
                android:id="@+id/personalInfo_EDT_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/enter_id"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#86818E"
                android:textColorHint="#86818E" />

            <EditText
                android:id="@+id/personalInfo_EDT_email"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edit_text"
                android:hint="דואר אלקטרוני"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="#86818E"
                android:textColorHint="#86818E" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:layoutDirection="rtl">

                <EditText
                    android:id="@+id/personalInfo_EDT_phone"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:padding="10dp"
                    android:background="@drawable/rounded_edit_text"
                    android:cursorVisible="false"
                    android:enabled="false"
                    android:hint="@string/private_number"
                    android:inputType="numberDecimal"
                    android:textColor="#86818E"
                    android:textColorHint="#86818E" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/personalInfo_BTN_continue"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/continue_next_page"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                app:cornerRadius="20dp"
                app:strokeColor="@color/colorPrimaryDark"
                app:strokeWidth="2dp"
                android:theme="@style/Theme.MaterialComponents.NoActionBar"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>