<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_status"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="src.fragments.FragmentDocuments">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/documents"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/documents_IMB_id"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/idDocument"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/idDocument"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/documents_IMB_drivingLicense"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/drivingLicense"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/drivingLicense"
                    android:textSize="15sp"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/documents_IMB_carLicense"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/carLicense"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/carLicense"
                    android:textSize="15sp"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/documents_CB_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layoutDirection="rtl"
                android:buttonTint="#CD37E6"
                android:text="@string/useTerms"
                android:textColor="@color/white"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/documents_BTN_finish"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/continue_next_page"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:theme="@style/Theme.MaterialComponents.NoActionBar"
                app:cornerRadius="20dp"
                app:strokeColor="#CD37E6"
                app:strokeWidth="2dp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>